--- a/src/homecomponent/dashboard.css
+++ b/src/homecomponent/dashboard.css
@@ -4,38 +4,63 @@
 {
     height: auto;
     width: 85%;
-    padding: 0vh 5vh;
+    padding: 0vh 15vh 0vh 0vh;
     position: relative;
     display: flex;
     flex-wrap: wrap;
     align-items: baseline;
+    margin-right: 30px;
+    justify-content: space-evenly;
 }
 
 
 .right-div-alpha-wrapper-box{
-    padding: 2vh;
+    margin: 1vh;
     height: auto;
-    max-width: 30%;
-    min-width: 30%;
+    max-width: 27%;
+    min-width: 27%;
+    background-color:#F9F9F9;
+    padding: 3vh;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.131) 0px 5px 15px 1px;
 
 }
 .right-alpha-todo
 {
-    height: 70px;
+    height: 40px;
     width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-right: 5vh;
+    padding-right: 3px;
 }
 
 .right-alpha-todo span
 {
     font-weight: 600;
-    margin-left: 10px;
     font-size: 20px;
+    display: flex;
 }
+
+.right-alpha-todo span span
+{
+    margin-top: 2px;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    height: 21px;
+    width: 21px;
+    background: #fb9393;
+    background: -webkit-linear-gradient(to right, rgba(251,147,147,0.5), rgba(245,87,108,0.5));
+    background: linear-gradient(to right, rgba(251,147,147,0.5), rgba(245,87,108,0.5));
+    border-radius: 7px;
+    font-weight: 600;
+    margin-left: 4px;
+    font-size: 16px;
+    
+}
+
 .reset-list
 {
     font-size: 25px;
@@ -45,10 +70,11 @@
 .right-alpha-todo-content
 {
     height: auto;
-    width: 90%;
+    width: 100%;
     margin: 2vh 0px;
     padding: 2vh;
     border-radius: 10px;
+    background-color: white;
     border: 1px solid #e0e0e0;
     transition: 0.7s ease-in-out;
 }
@@ -68,7 +94,7 @@
 }
 .right-alpha-todo-content-heading h4
 {
-    width: 95%;
+    width: 100%;
     height: auto;
     line-height: 23px;
     font-weight: 400;
@@ -88,17 +114,19 @@
 
 .right-alpha-todo-control
 {
-    border-top: 0.7px solid black;
+    border: 0.7px solid black;
     font-size: 15px;
     font-weight: 200;
     display: flex;
-    padding: 7px 1vh;
+    padding: 7px 10px;
     justify-content: space-between;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
 }
 
 .right-alpha-todo-control span
 {
-    font-size: 14px;
+    font-size: 13px;
     display: flex;
     align-items: center;
 }
@@ -116,33 +144,60 @@
 {
     height: 50px;
     display: flex;
-    width: 90%;
+    width: 100%;
     border-radius: 10px;
-    border: #d7d7d7 1px  dashed ;
+    border: #9f9f9f 1px  dashed ;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f9f9f9;
+    background-color: #ededed;
     transition: 0.3s ease-in-out;
 }
 
 .main-container-add-task:hover
 {
     cursor: pointer;
-    border: #d7d7d7 1px solid ;
-    background-color: #f3f3f3;
+    border: #7e7e7e 1px solid ;
+    background-color: #ededed;
 }
 
 .todo-icon-bottom, .doing-icon-bottom , .done-icon-bottom
 {
     height: 24px;
-}
-.todo-icon-bottom
-{
-    margin-right: 3px;
+    width: 24px;
+    margin-right: 4px;
+    border-radius: 50%;
+    cursor: pointer;
+   
+    
 }
 
-.right-alpha-todo-control div img
+.todo-icon-bottom,  .numberoftodo
+{
+    background: #fb9393;
+    background: -webkit-linear-gradient(to right, rgba(251,147,147,0.5), rgba(245,87,108,0.5));
+    background: linear-gradient(to right, rgba(251,147,147,0.5), rgba(245,87,108,0.5));
+    border: 2px solid  #ff5656;
+}
+.doing-icon-bottom, .numberofdoing
+{
+        background: #d4fc79!important;
+        background: -webkit-linear-gradient(to right, rgba(212,252,121,0.5), rgba(150,230,161,0.5))!important;
+        background: linear-gradient(to right, rgba(212,252,121,0.5), rgba(150,230,161,0.5))!important;
+        border: 2px solid  #afe434;
+}
+.done-icon-bottom, .numberofdone{
+        background: #a1c4fd !important;
+        background: -webkit-linear-gradient(to right, rgba(161,196,253,0.5), rgba(194,233,251,0.5))!important;
+        background: linear-gradient(to right, rgba(161,196,253,0.5), rgba(194,233,251,0.5))!important;
+        border: 2px solid  #3b86ff;
+}
+.right-alpha-todo-control div
+{
+    display: flex;
+}
+.right-alpha-todo-control div span
 {
     padding: 0px 3px;
+    
 }
