--- a/src/homecomponent/notes-main-right.css
+++ b/src/homecomponent/notes-main-right.css
@@ -37,7 +37,7 @@
 
 .notes-main-right-content
 {
-    height: auto;
+    height: 100vh;
     margin-left: 25vw;
     width: 70vw;
     background-color: #F9F9F9;
@@ -45,4 +45,30 @@
     height: 100vh;
     padding: 3vh;
     border-radius: 10px;
+}
+
+.main-show-notes-wrapper
+{
+    height: 15vh;
+    width: 100%;
+    display: flex;
+    margin-bottom: 5vh;
+    border-radius: 10px;
+    padding: 1vh;
+}
+.main-show-notes-logo
+{
+    height: 100%;
+    width: 10%;
+}
+.main-show-notes-content
+{
+    height: 100%;
+    width: 80%;
+    background-color: blue;
+}
+.main-show-notes-button
+{
+    height: 100%;
+    width: 10%;
 }
